# benchmarks_and_tests

./: Cargo.toml  README.md  rust-toolchain.toml
alloy/: Cargo.toml
alloy/src/: main.rs
benches/: bench_slice_vs_iter.rs  benchmark.rs
incompatible_types/: Cargo.toml
incompatible_types/src/: main.rs
mutex/examples/: non_sync_mutex_one_thread.rs  rc_in_mutex.rs  share_mutex_between_threads.rs  share_non_sync_mutex.rs
mutex/src/: main.rs  non_sync_mutex_one_thread.rs  rc_in_mutex.rs  share_mutex_between_threads.rs  share_non_sync_mutex.rs
return_impl_trait/: Cargo.toml
return_impl_trait/src/: main.rs
same_memory_references/: Cargo.toml
same_memory_references/src/: main.rs
serde_example/: Cargo.toml
serde_example/src/: lib.rs  swap_versioning.rs  tests.rs
slice_vs_iter/: Cargo.toml  README.md
slice_vs_iter/src/: lib.rs  main.rs
sof_mem_allocation/: Cargo.toml
sof_mem_allocation/src/: main.rs
src/: lib.rs  main.rs
ub_examples/: Cargo.toml  README.md
ub_examples/examples/: dangling_pointer.rs  null_pointer.rs  type_invariant.rs  uninitialized_memory.rs
ub_examples/src/: main.rs
