[package]
name = "benchmarks_and_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.3.0"
hyper = { version = "0.14.18", default-features = false, features = ["server", "http1", "http2", "tcp", "client"] }
hyper-tls = "0.5.0"
url = "2.5.0"
ethabi = { version = "17.0.0" }
ethereum-types = { version = "0.13", default-features = false, features = ["std", "serialize"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false